cleanup the column layout a little bit (plus a small expand-collapse bugfix)

--- a/chat/assets/style.styl
+++ b/chat/assets/style.styl
@@ -178,20 +178,7 @@ button, select
         border-radius: 2px
         padding-left: 3px
 
-.main-content
-  background: white
-  absolute: top right
-  height: 100%
-  &:not(.collapse-left)
-    left: 200px
-    .message-container { margin-left: 0px }
-    .chat-controls
-      border-radius: bottom left 2px
-      border-left: border-grey
-    .input-container
-      border-radius: top left 2px
-      border-left: border-grey
-  &.collapse-left { left: 0px }
+
 .right-sidebar
   absolute: top right
   height: 100%
@@ -232,9 +219,11 @@ button, select
   z-index: 10
 
 .chat-column
+  background: white
   absolute: top left
   min-width: 300px
   height: 100%
+  &.collapse-left { left: 0px }
   &.collapse-right { right: 0px }
   &:not(.collapse-right)
     right: 200px
@@ -245,6 +234,15 @@ button, select
     .input-container
       border-radius: top right 2px
       border-right: border-grey
+  &:not(.collapse-left)
+    left: 200px
+    .message-container { margin-left: 0px }
+    .chat-controls
+      border-radius: bottom left 2px
+      border-left: border-grey
+    .input-container
+      border-radius: top left 2px
+      border-left: border-grey
 .alert-container
   relative: top
   margin-top: 32px
